--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "albumentations>=2.0.8",
+    "opencv-python>=4.12.0.88",
     "pillow>=12.0.0",
+    "ultralytics>=8.3.235",
 ]
